<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.ipb-halle.msbi </groupId>
	<artifactId>MassBank-Project</artifactId>
	<version>2.2.8-SNAPSHOT</version>
	<name>MassBank-Project</name>
	<url>https://github.com/MassBank/MassBank-web</url>
	<packaging>pom</packaging>
	<modules>
		<module>MassBank-lib</module>
		<module>MassBank-web</module>
	</modules>

	<licenses>
		<license>
			<name>GPL-2.0-or-later</name>
			<url>https://www.gnu.org/licenses/old-licenses/gpl-2.0-standalone.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<organization>
		<name>MassBank consortium</name>
		<url>https://github.com/MassBank</url>
	</organization>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<versionName>${project.version}</versionName>
		<timestamp>2024-06-04T14:24:26+02:00</timestamp>
		<cdk-version>2.9</cdk-version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<!-- MassBank-lib -->
			<dependency>
				<groupId>de.ipb-halle.msbi</groupId>
				<artifactId>MassBank-lib</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-core</artifactId>
				<version>2.24.2</version>
			</dependency>
			<dependency>
				<groupId>jakarta.platform</groupId>
				<artifactId>jakarta.jakartaee-api</artifactId>
				<version>9.1.0</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>2.18.0</version>
			</dependency>
			<dependency>
				<groupId>commons-fileupload</groupId>
				<artifactId>commons-fileupload</artifactId>
				<version>1.5</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>3.17.0</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-configuration2</artifactId>
				<version>2.11.0</version>
			</dependency>
			<dependency>
				<groupId>commons-cli</groupId>
				<artifactId>commons-cli</artifactId>
				<version>1.9.0</version>
			</dependency>
			<dependency>
				<groupId>commons-beanutils</groupId>
				<artifactId>commons-beanutils</artifactId>
				<version>1.9.4</version>
			</dependency>
			<dependency>
				<groupId>org.openscience.cdk</groupId>
				<artifactId>cdk-data</artifactId>
				<version>${cdk-version}</version>
			</dependency>
			<dependency>
				<groupId>org.openscience.cdk</groupId>
				<artifactId>cdk-depict</artifactId>
				<version>${cdk-version}</version>
			</dependency>
			<dependency>
				<groupId>org.openscience.cdk</groupId>
				<artifactId>cdk-inchi</artifactId>
				<version>${cdk-version}</version>
			</dependency>
			<dependency>
				<groupId>org.openscience.cdk</groupId>
				<artifactId>cdk-formula</artifactId>
				<version>${cdk-version}</version>
			</dependency>
			<dependency>
				<groupId>org.mariadb.jdbc</groupId>
				<artifactId>mariadb-java-client</artifactId>
				<version>3.5.1</version>
			</dependency>
			<dependency>
				<groupId>com.github.petitparser</groupId>
				<artifactId>petitparser-core</artifactId>
				<version>2.4.0</version>
			</dependency>
			<dependency>
				<groupId>edu.ucdavis.fiehnlab.splash</groupId>
				<artifactId>core</artifactId>
				<version>1.8</version>
			</dependency>
			<dependency>
				<groupId>de.undercouch</groupId>
				<artifactId>citeproc-java</artifactId>
				<version>3.1.0</version>
			</dependency>
			<dependency>
				<groupId>com.google.code.gson</groupId>
				<artifactId>gson</artifactId>
				<version>2.11.0</version>
			</dependency>
			<dependency>
				<groupId>org.apache.httpcomponents</groupId>
				<artifactId>httpclient</artifactId>
				<version>4.5.14</version>
			</dependency>
			<dependency>
				<groupId>io.github.dan2097</groupId>
				<artifactId>jna-inchi-all</artifactId>
				<version>1.2.1</version>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-engine</artifactId>
				<version>5.11.3</version>
			</dependency>
			<dependency>
				<groupId>com.zaxxer</groupId>
				<artifactId>HikariCP</artifactId>
				<version>6.2.1</version>
			</dependency>

			<!-- MassBank-web -->
			<dependency>
				<groupId>org.jfree</groupId>
				<artifactId>jfreechart</artifactId>
				<version>1.5.5</version>
			</dependency>
			<dependency>
				<groupId>org.jfree</groupId>
				<artifactId>jfreesvg</artifactId>
				<version>3.4.3</version>
			</dependency>
			<dependency>
				<groupId>jakarta.servlet.jsp.jstl</groupId>
				<artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
				<version>2.0.0</version>
			</dependency>
			<dependency>
				<groupId>com.github.dfabulich</groupId>
				<artifactId>sitemapgen4j</artifactId>
				<version>1.1.2</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-enforcer-plugin</artifactId>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>3.6.3</version>
								</requireMavenVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<configuration>
					<licenseName>gpl_v2</licenseName>
					<organizationName>MassBank consortium</organizationName>
					<inceptionYear>2016</inceptionYear>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.spdx</groupId>
				<artifactId>spdx-maven-plugin</artifactId>
				<executions>
					<execution>
						<id>build-spdx</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>createSPDX</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<licenseDeclared>GPL-2.0-or-later</licenseDeclared>
				</configuration>
			</plugin>
		</plugins>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-enforcer-plugin</artifactId>
					<version>3.5.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.13.0</version>
					<configuration>
						<release>21</release>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-war-plugin</artifactId>
					<version>3.4.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.4.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>3.1.3</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-install-plugin</artifactId>
					<version>3.1.3</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.3.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>4.0.0-M16</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.5.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.4.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>3.7.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>3.8.1</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>build-helper-maven-plugin</artifactId>
					<version>3.6.0</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>license-maven-plugin</artifactId>
					<version>2.4.0</version>
				</plugin>
				<plugin>
					<groupId>org.spdx</groupId>
					<artifactId>spdx-maven-plugin</artifactId>
					<version>0.7.4</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>


	<repositories>
		<repository>
			<id>Jena-Bio</id>
			<name>Jena Bio Repository libs-release-oss</name>
			<url>https://bio.informatik.uni-jena.de/repository/libs-release-oss</url>
		</repository>
	</repositories>

</project>
